# generative-deep-learning

./: README.md  pyproject.toml
ch02-deep-learning/: celeba-faces-vae.ipynb  cifar-10-cnn-with-bad.py  cifar-10-cnn-without-bad.py  cifar-10-mlp.py  cifar_cnn.py  fashion-mnist-vae.py  pyproject.toml  utils.py  vae-fashion.ipynb
