[project]
name = "ch02-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tensorflow>=2.18.0",
]
